--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 </head>
 <body>
 
-    <h1>And now,</h1>
-    <h2>It's... MONTY PYTHON'S FLYING CIRCUS-ES!!!</h2>
-    <p>Hope you enjoy this playlist! If you are under 15, click off the page.</p>
+    <h1>And now for something completely different.</h1>
+    <h2>It's...       MONTY PYTHON'S FLYING CIRCUSSSS!!!</h2>
+    <p>Hope you enjoy this! If you are under 15, click off the page.</p>
 
 <video width="640" height="360" autoplay loop muted>
-  <source src="video.mp4" type="video/mp4">
+  <source src="How To Rid The World Of All Known Diseases Sketch.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
